@@ -260,8 +260,8 @@ Behavior   : Conceirge\n\r\
 Targets    : MOBs, Items, Rooms, Areas\n\r\
 Parameters : [ALL PRICE]/[AREA/ROOM]=[PRICE]/[PARAM]=[VALUE]; ... ; \n\r\
 Example    : 1.5\n\r\
-Example    : Midgaard#3001=1.5; Smurfville=2.0; 70 ; AREAONLY=true\n\r\
-Example    : Midgaard#3032; 100 ; AREAONLY=false; MAXRANGE=100\n\r\
+Example    : Midgaard#3001=1.5; Smurfville=2.0; =70 ; AREAONLY=true\n\r\
+Example    : Midgaard#3032; =100 ; AREAONLY=false; MAXRANGE=100\n\r\
 Description: \n\r\
 This behavior makes the mob a deliverer of information to players, specifically the \
 directions to rooms or areas.  The mob will charge for his services if you specify \
@@ -280,7 +280,8 @@ current room to the one sought.  NOWATER=true to prevent trails over water. NOAI
 prevent trails through the air. NOLOCKS=true to prevent trails through locked doors. \
 NOHOMES=true to prevent trails through private homes. NOINDOOR=true to prevent finding or trailing \
 through indoor rooms. NOCLIMB to prevent trails through climbable exits. \
-NOCRAWL to prevent trails through crawlable exits.
+NOCRAWL to prevent trails through crawlable exits.  Use PORTAL=true to have the concierge create \
+a magical portal instead of giving directions.
 
 BEHAVIOR_CORPSEEATER=\
 Behavior   : CorpseEater\n\r\
