@@ -33,6 +33,7 @@
   32. New Thief/Sailor Skills: Sea Legs, Ride the Rigging, Belay, Buried Treasure, Wenching
   33. New Thief/Sailor Skills: Treasure Map, Walk the Plank, Sea Mapping, Plunder, Sea Charting
   34. New Thief/Sailor Skills: Dead Reckoning, Sea Navigation, Scuttle
+  35. Concierge behavior can now create portals if you want.
 # Build 5.9.3 Released 05/08/2016
    1. Follower behavior now has a few more options.
    2. STAT [MOBNAME] will now give full editor stats also, and 
